syntax = "proto3";

package service;

service Fetcher {
    rpc Fetch (FetchRequest) returns (FetchResponse){}
}

message FetchRequest {
    string dsType = 1;
    string dsRepository = 2;
    string dsDestFolder = 3;
}

message FetchResponse {
    string Res = 1;
}
